CHANGES IN FLTK 1.1.5rc1

	- Documentation updates (STR #245, STR #250, STR #277,
	  STR #281, STR #328, STR #338)
	- Fl_File_Chooser did not allow manual entry of a drive
	  letter (STR #339)
	- Fl_Menu now uses the boxtype to redraw the menu
	  background (STR #204)
	- Fl_Scroll now shows the background image when a framed
	  box type is used and the Fl_Scroll is a direct
	  decendent of a window (STR #205)
	- Added a new_directory_tooltip string pointer to allow
	  localization of the file chooser's new directory
	  button (STR #340)
	- Added Fl_Menu_::find_item() method (STR #316)
	- The Fl_Widget copy operator definitions were not
	  conditionally compiled properly (STR #329)
	- FLUID's Layout functionality did not move child
	  widgets when laying out group widgets (STR #319)
	- FLUID's Layout->Center In Group functionality did not
	  properly handle widgets that were children of a
	  Fl_Window widget (STR #318)
	- The Fl_Text_Display destructor did not remove the
	  predelete callback associated with the current buffer
	  (STR #332)
	- Fixed several bugs in the MacOS X Fl::add_fd()
	  handling (STR #333, STR #337)
	- The Fl_Text_Display widget did not display selections
	  set by the application (STR #322)
	- FLUID crashed if you did layout with a window widget
	  (STR #317)
	- Fl_Scroll::clear() didn't remove the child widget from
	  the Fl_Scroll widget (STR #327)
	- Fl_Value_Slider::draw_bg() didn't always apply the
	  clipping rectangle (STR #235)
	- fl_filename_relative() returned the wrong string if
	  the absolute pathname was equal to the current working
	  directory (STR #224)
	- Fl_Help_Dialog didn't correctly restore the scroll
	  position when going forward/back in the link history
	  if the file changed (STR #218)
	- glutGetModifiers() did not mask off extra state bits,
	  confusing some GLUT-based applications (STR #213)
	- Fixed mouse capture problems on MacOS X (STR #209, STR
	  #229)
	- Fl_Sys_Menu_Bar is now built into the library for